--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-# local package
--e .
+pytorch
+transformers
+datasets
 
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+mkdir data/raw
+mkdir data/processed
+mkdir data/interim
+mkdir data/processed/UD
