--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 vim
 tmux
 
+git config --global user.email "you@example.com"
+git config --global user.name "Your Name"
+
 scipy
 pytorch
 transformers
