--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ git config --global user.email "you@example.com"
 git config --global user.name "Your Name"
 
 scipy
-pytorch
+# pytorch
 transformers
 datasets
 conllu
@@ -15,5 +15,7 @@ mkdir data/raw
 mkdir data/processed
 mkdir data/interim
 mkdir data/processed/UD
+mkdir data/processed/wikiann
 mkdir models
 mkdir models/probes
+mkdir models/finetuned
